fixed Z index issue
Fixed Carasoul z index overlaping hamburger sidebar

--- a/Styles/Header.css
+++ b/Styles/Header.css
@@ -11,6 +11,7 @@ header img {
 }
 
 .hamburger {
+  margin-top: 60%;
   width: 40px;
   height: 25px;
   display: flex;
@@ -20,7 +21,6 @@ header img {
 }
 
 .hamburger span {
-  
   display: block;
   width: 100%;
   height: 5px;
@@ -61,6 +61,7 @@ header img {
     padding-bottom: 20px;
     padding-left: 50px;
     margin: 0;
+    
 }
 
 .sidebar a:hover{
